@@ -1,3 +1,10 @@
+2006-10-21 11:45-EDT Matt Rice <ratmice@yahoo.com>
+
+	* Palettes/3Containers/GormTableViewEditor.m: Implement documentRect.
+	Since the editor is the table's superview, it will take its size from
+	the editor.  Corrects bug#18073
+	Patch committed by Gregory John Casamento <greg_casamento@yahoo.com>
+	
 2006-10-20 20:08-EDT Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* GormCore/GNUmakefile
